fixed title tag

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE Html>
 <html>
 <head>
-    <title
+    <title>Collaboration test</title>
     </head>
     <body>
-    test
+    test, fixed title tag :P 
     </body>
 </html>
